--- a/style3.css
+++ b/style3.css
@@ -119,15 +119,17 @@ h1{
   font-size: 4.5em;
   font-family: 'Allerta Stencil', sans-serif;
   text-transform: uppercase;
+  color:white;
 }
 
 h3{
   text-transform: capitalize;
+  color:white;
 }
 
 hr{
-  width:400px;
-  border-top: 1px solid #f8f8f8;
+  width:700px;
+  border-top: 2px solid #f8f8f8;
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
